BUG: module_v4skin | styles -> fixed the jumping spinners when loading a widget

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides.less
@@ -1144,7 +1144,7 @@ footer {
                 }
 
                 .content {
-                    padding-top: 5px;
+                    margin-top: 5px;
                 }
 
                 &.sortActive {
